[project]
name = "rocky"
version = "0.1.0"
description = "F1 track visualization and geometry toolkit"
authors = [
    { name="Andrew Gordienko" }
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rocky"]
